<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SendMailApp</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="send_to">Send To</string>
    <string name="send_cc">CC</string>
    <string name="send_subject">Subject</string>
    <string name="send_msg">Message</string>
    <string name="send_button">Send Mail</string>

</resources>
